# 8ssible-Healing-Seoul-Analysis

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
KM/: readme.txt
KM/crawler/: commute_stress_pipeline.ipynb  drop.ipynb  kakao_crawler.ipynb  kakao_stress_progress.json  matched_healing_spots.csv  naver_crawler.ipynb  refined_healing_spots_자치구균등.csv
KM/etc/: 20191001_OUTPUT.csv  add_gu_to_subway.py  cscs.csv  cscs.ipynb  cscs1.ipynb  cscs_run.ipynb  datatest.ipynb  env_score_gu_year.csv  env_weight_comparison.ipynb  make_annual_avg.py  (+18 more)
branch_SG/: Discomfort index.ipynb  Garbage_collection_status.ipynb  test seunggeuni.ipynb  vibration_2023.ipynb  vibration_2023_2.ipynb  일평균대기오염도.ipynb
프로젝트 HY/: HY test.ipynb  env_score_gu_year.csv  gu_susi_score_100_by_year.csv  gu_susi_score_adjusted_by_year.csv  gu_traffic_entropy_score_25_by_year_kr.csv  kakao_crawler_HY.ipynb  kakao_crawler_filtered_HY.ipynb  naver_crawler_HY.ipynb  naver_crawler_filtered_HY.ipynb  naver_stress_progress.json  noise_rank_compare.csv  noise_vibration_final.csv  validation_rank_change_detail.csv  work_alt_ranked_by_year.csv  work_ranked_by_year.csv  강수량_월별_자치구별_구청관측소만.csv  강수량_일별_자치구별_구청관측소만.csv  교통_혼잡_스트레스_종합점수.csv  교통_혼잡_스트레스_종합점수_2022.csv  교통_혼잡_스트레스_종합점수_2023.csv  교통_혼잡_스트레스_종합점수_2024.csv  서울시_환경점수_연도별_엔트로피가중치.csv  소음 점수.ipynb  소음 점수_EDA.ipynb  소음 점수__주석.ipynb  소음EDA_최종리포트_2024기준.csv  소음_EDA.ipynb  소음_데이터재검증.ipynb  소음민감도분석_2024.csv  소음최종점수_with_rank.csv  소음최종점수_보간후_2022_2024.csv  스시점수_생성.ipynb  스시점수_생성2.ipynb  클러스터링.ipynb  클러스터링용_보간후_민원소음진동_점수_2022_2024.csv  환경점수_가중치.csv
(+174 files in other folders)
